--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,8 @@ width="64"/>
 <a href="./about">About Us</a>
 <a href="./privacy">Privacy Policy</a> <a href="./terms">Terms of Use</a>
 <a href="./contact">Contact Us</a>
+<a href="./blog">Blog</a>
+<a href="./news">News</a>
     </footer>
   </body>
 </html>
